[package]
name = "allicagtor"
version = "0.1.0"
authors = ["Aiden Luo <aiden0xz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"

rand = "0.7"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.7"
serde = "1"
serde_json = "1"